--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="home.html"><i data-feather="home"></i> Home</a>
+                        <a class="nav-link" href="index.html"><i data-feather="home"></i> Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html"><i data-feather="info"></i> About</a>
